k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fellowship-api
spec:
  type: ClusterIP
  selector:
    app: fellowship-api
  ports:
    - protocol: TCP
      port: 80          
      targetPort: 8000
