k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fellowship-frontend
spec:
  type: NodePort
  selector:
    app: fellowship-frontend
  ports:
    - port: 80
      targetPort: 80
